--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "back-midproj-hdv",
-  "version": "0.0.0",
-  "private": true,
+  "name": "docker_node_mongo_starter",
+  "version": "1.0.0",
+  "description": "docker starter with node js and mongodb services",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js",
+    "format": "prettier --write {**/,}*.js",
+    "lint": "prettier --check {**/,}*.js",
+    "dev": "nodemon server.js"
   },
+  "author": "Syed Afzal",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.4",
+    "express": "^4.17.1",
+    "lodash": "^4.17.13",
+    "mongodb": "^3.0.7",
+    "mongoose": "^6.0.9",
+    "simple-node-logger": "^18.12.23",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.5"
   }
 }
