--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.13",
     "mongodb": "^3.0.7",
     "mongoose": "^6.0.9",
+    "node-mongotools": "^2.2.6",
     "simple-node-logger": "^18.12.23",
     "validator": "^13.7.0"
   },
